Changes in Images

--- a/airfreight.html
+++ b/airfreight.html
@@ -147,7 +147,7 @@
     <main>
                 <!--? slider Area Start-->
                 <div class="slider-area ">
-                    <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/airfreight.jpg">
+                    <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/airfreight1.jpg" style="height: 600px; width: 100%;"><!--style="display: block; margin-left: auto; margin-right: auto; width: 70%px; height: 500px;"-->
                         <div class="container">
                             <div class="row">
                                 <div class="col-xl-12">
