--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
     <main>
         <!--? slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/contact_us.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/contact_us.jpg" style="height: 600px; width: 100%;">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
