--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="transportation.html">Transportation</a></h5>
-                            <p>We offer dependable, flexible and wide range of trucking and inter modal services. Our Inland transportation system works as a vital connecting link in our wide area of Supply chain management system. Our extensive array of trucks, trailers and other inland transportation. <a href="transportation.html">Read More ...</a><br><br> </p>
+                            <p>We offer dependable, flexible and wide range of trucking and inter modal services. Our Inland transportation system works as a vital connecting link in our wide area of Supply chain management system. Our extensive array of trucks, trailers and other inland transportation. <a href="transportation.html">Read More ...</a></p>
                         </div>
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="projectcargo.html">Project Cargo</a></h5>
-                            <p>We are an experienced logistics company which specializes in management of projects with complex logistics needs. <a href="projectcargo.html">Read More</a><br><br></p>
+                            <p>We are an experienced logistics company which specializes in management of projects with complex logistics needs. <a href="projectcargo.html">Read More</a></p>
                         </div>
                     </div>
                 </div>
