Changes in boxes height

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
 
         .mySlides {display:none;}
 
+        .col-container {
+            display: table;
+            width: 100%;
+        }
+        .col {
+            display: table-cell;
+            padding: 16px;
+        }
+
 
         </style>
 </head>
@@ -214,7 +223,7 @@
 </div>
 
 
-
+<!--Categories Start-->
 <div class="categories-area section-padding30">
         <div class="container">
             <div class="row">
@@ -227,8 +236,9 @@
                 </div>
             </div>
             <div class="row">
+                
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
+                    <div class="single-cat text-center mb-50 " style="height: 400px;">
                         <!--<div class="cat-icon">
                             <span class="flaticon-ship"></span>
                         </div>-->
@@ -239,7 +249,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
+                    <div class="single-cat text-center mb-50" style="height: 400px;">
+
                         <!--<div class="cat-icon">
                             <span class="flaticon-plane"></span>
                         </div>-->
@@ -250,7 +261,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
+                    <div class="single-cat text-center mb-50" style="height: 400px;">
                         <!--<div class="cat-icon">
                             <span class="flaticon-shipped"></span>
                         </div>-->
@@ -261,7 +272,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
+                    <div class="single-cat text-center mb-50" style="height: 400px;">
                         <!--<div class="cat-icon">
                             <span class="flaticon-shipped"></span>
                         </div>-->
@@ -272,7 +283,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
+                    <div class="single-cat text-center mb-50" style="height: 400px;">
                         <!--<div class="cat-icon">
                             <span class="flaticon-shipped"></span>
                         </div>-->
@@ -283,7 +294,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
+                    <div class="single-cat text-center mb-50" style="height: 400px;">
                         <!--<div class="cat-icon">
                             <span class="flaticon-shipped"></span>
                         </div>-->
@@ -294,7 +305,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
+                    <div class="single-cat text-center mb-50" style="height: 400px;">
                         <!--<div class="cat-icon">
                             <span class="flaticon-shipped"></span>
                         </div>-->
@@ -305,7 +316,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
+                    <div class="single-cat text-center mb-50" style="height: 400px;">
                         <!--<div class="cat-icon">
                             <span class="flaticon-shipped"></span>
                         </div>-->
@@ -315,6 +326,7 @@
                         </div>
                     </div>
                 </div>
+            
             </div>
         </div>
     </div>
