--- a/services.html
+++ b/services.html
@@ -180,7 +180,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
+                        <div class="single-cat text-center mb-50" style="height: 400px;">
                             <!--<div class="cat-icon">
                                 <span class="flaticon-ship"></span>
                             </div>-->
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
+                        <div class="single-cat text-center mb-50" style="height: 400px;">
                             <!--<div class="cat-icon">
                                 <span class="flaticon-plane"></span>
                             </div>-->
@@ -202,18 +202,18 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
+                        <div class="single-cat text-center mb-50" style="height: 400px;">
                             <!--<div class="cat-icon">
                                 <span class="flaticon-shipped"></span>
                             </div>-->
                             <div class="cat-cap">
                                 <h5><a href="transportation.html">Transportation</a></h5>
-                                <p>We offer dependable, flexible and wide range of trucking and inter modal services. Our Inland transportation system works as a vital connecting link in our wide area of Supply chain management system. Our extensive array of trucks, trailers and other inland transportation. <a href="transportation.html">Read More ...</a><br><br> </p>
+                                <p>We offer dependable, flexible and wide range of trucking and inter modal services. Our Inland transportation system works as a vital connecting link in our wide area of Supply chain management system. Our extensive array of trucks, trailers and other inland transportation. <a href="transportation.html">Read More ...</a> </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
+                        <div class="single-cat text-center mb-50" style="height: 400px;">
                             <!--<div class="cat-icon">
                                 <span class="flaticon-shipped"></span>
                             </div>-->
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
+                        <div class="single-cat text-center mb-50" style="height: 400px;">
                             <!--<div class="cat-icon">
                                 <span class="flaticon-shipped"></span>
                             </div>-->
@@ -235,18 +235,18 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
+                        <div class="single-cat text-center mb-50" style="height: 400px;">
                             <!--<div class="cat-icon">
                                 <span class="flaticon-shipped"></span>
                             </div>-->
                             <div class="cat-cap">
                                 <h5><a href="projectcargo.html">Project Cargo</a></h5>
-                                <p>We are an experienced logistics company which specializes in management of projects with complex logistics needs. <a href="projectcargo.html">Read More ...</a><br><br></p>
+                                <p>We are an experienced logistics company which specializes in management of projects with complex logistics needs. <a href="projectcargo.html">Read More ...</a></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
+                        <div class="single-cat text-center mb-50" style="height: 400px;">
                             <!--<div class="cat-icon">
                                 <span class="flaticon-shipped"></span>
                             </div>-->
@@ -257,7 +257,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
+                        <div class="single-cat text-center mb-50" style="height: 400px;">
                             <!--<div class="cat-icon">
                                 <span class="flaticon-shipped"></span>
                             </div>-->
