--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="projectcargo.html">Project Cargo</a></h5>
-                            <p>We are an experienced logistics company which specializes in management of projects with complex logistics needs. <a href="projectcargo.html">Read More</a></p>
+                            <p>We are an experienced logistics company which specializes in management of projects with complex logistics needs. <a href="projectcargo.html">Read More ...</a></p>
                         </div>
                     </div>
                 </div>
