Changes by Manish

--- a/airfreight.html
+++ b/airfreight.html
@@ -42,9 +42,9 @@
                 .vertical-menu a.active {
                   
                 } */
-                .arrow {
-list-style-image: url('assets/img/bullet.jpg');
-}
+                ul.arrow {
+                    list-style-image: url('assets/img/bullet.jpg') !important;
+                }
                 </style>
         </head>
         <body style="background-color: rgb(201, 205, 211);">
@@ -200,7 +200,7 @@ list-style-image: url('assets/img/bullet.jpg');
                                         <b>Key Features</b>
                                     </p>
                                     <p>
-                                        <ul class="arrow" style="color: #64676c; list-style-image: url('assets/img/bullet.jpg');"> <!-- list-style-image: url('assets/img/bullet.jpg');-->
+                                        <ul class="arrow" style="color: #64676c; list-style-image: url('assets/img/bullet.jpg') !important;"> <!-- list-style-image: url('assets/img/bullet.jpg');-->
                                             <li>•&nbsp&nbspAir Import and Export consolidation services</li>
                                             <li>•&nbsp&nbspCargo pick up from origin</li>
                                             <li>•&nbsp&nbspExpediting critical shipments</li>
