--- a/index.html
+++ b/index.html
@@ -363,25 +363,25 @@
     </div>
     <!-- About Area End -->
     <!--? contact-form start -->
-    <section class="contact-form-area section-bg  pt-115 pb-120 fix" data-background="assets/img/request_a_quote.jpg">
+    <section class="contact-form-area section-bg  pt-115 pb-120 fix" data-background="assets/img/request_a_quote.jpg" style="height: 600px; width: auto;">
         <div class="container">
             <div class="row justify-content-end">
                 <!-- Contact wrapper -->
                 <div class="col-xl-8 col-lg-9">
-                    <div class="contact-form-wrapper">
+                    <div class="contact-form-wrapper" style="width: 500px;padding-top: 0px; background-color: rgb(16, 16, 39);margin-right: 0px;padding-right: 50px; padding-left: 50px; margin-top: 159px;margin-left: 483px;" >
                         <!-- From tittle -->
                         <div class="row">
                             <div class="col-lg-12">
                                 <!-- Section Tittle -->
-                                <div class="section-tittle mb-50">
-                                    <span>Get a Quote For Free</span>
-                                    <h2>Request a Free Quote</h2>
-                                    <p><b>KK Global Logistics Services</b> presents you services with flexible, convenient and easy ways of freight. Do let us know about your requirements by clicking on the button below. </p>
+                                <div class="section-tittle mb-50" >
+                                    <!-- <span>Get a Quote For Free</span> -->
+                                    <h2 style="color: floralwhite;">Request a Free Quote</h2>
+                                    <p>KK Global Logistics Services presents you services with flexible, convenient and easy ways of freight. Do let us know about your requirements by clicking on the button below.</p>
                                 </div>
                             </div>
                         </div>
-                                                <div class="col-lg-12">
-                            <button name="submit" class="submit-btn"><a href="getaquote.html"> Request a Quote</a></button>
+                        <div class="col-lg-12">
+                            <button name="submit" class="submit-btn" style="width: 200px;margin-left: 10‒;margin-left: 90px;"><a href="getaquote.html"> Click Here </a></button>
                         </div>
                     </div>
                 </div>
