--- a/customclearance.html
+++ b/customclearance.html
@@ -192,12 +192,12 @@
                                         <b>To facilitate smooth Custom Clearance, we provides…</b>
                                     </p>
                                     <p>
-                                        <ul>
-                                            <li>•	Pre Shipment & Post Shipment Documentations.</li>
-                                            <li>•	Expertise in various Schemes of Import & Export Activities. (DEPB/ DEEC/ EPCG/ DUTY DRAWBACK/ BONDING/ DE-BONDING)</li>
-                                            <li>•	Customs Clearance for Import & Export Consignments.</li>
-                                            <li>•	Applying of Certifications like Fumingation / Phytosanitary Certificates.</li>
-                                            <li>•	Arranging for Container Survey by authorized Surveyors.</li>
+                                        <ul style="color: #64676c;">
+                                            <li>• &nbsp;&nbsp;	Pre Shipment & Post Shipment Documentations.</li>
+                                            <li>• &nbsp;&nbsp;	Expertise in various Schemes of Import & Export Activities. (DEPB/ DEEC/ EPCG/ DUTY DRAWBACK/ BONDING/ DE-BONDING)</li>
+                                            <li>• &nbsp;&nbsp;	Customs Clearance for Import & Export Consignments.</li>
+                                            <li>• &nbsp;&nbsp;	Applying of Certifications like Fumingation / Phytosanitary Certificates.</li>
+                                            <li>• &nbsp;&nbsp;	Arranging for Container Survey by authorized Surveyors.</li>
                                             
                                         </ul>
                                     </p>
