--- a/projectcargo.html
+++ b/projectcargo.html
@@ -190,17 +190,17 @@
                                         <b>Key Features</b>
                                     </p>
                                     <p>
-                                        <ul>
-                                            <li>•	Turnkey project planning & management</li>
-                                            <li>•	Contracts with heavy haulers</li>
-                                            <li>•	Safe handling of over dimensional cargo</li>
-                                            <li>•	Specialized handling of hazardous & sensitive cargo</li>
-                                            <li>•	Route survey & selection</li>
-                                            <li>•	Handling of special Equipments</li>
-                                            <li>•	Door to door insurance cover</li>
-                                            <li>•	Timeline updates at every stage</li>
-                                            <li>•	Part & full charters</li>
-                                            <li>•	Technically advanced systems for safe operations</li>
+                                        <ul style="color: #64676c;">
+                                            <li>• &nbsp;&nbsp;	Turnkey project planning & management</li>
+                                            <li>• &nbsp;&nbsp;	Contracts with heavy haulers</li>
+                                            <li>• &nbsp;&nbsp;	Safe handling of over dimensional cargo</li>
+                                            <li>• &nbsp;&nbsp;	Specialized handling of hazardous & sensitive cargo</li>
+                                            <li>• &nbsp;&nbsp;	Route survey & selection</li>
+                                            <li>•&nbsp;&nbsp;	Handling of special Equipments</li>
+                                            <li>•&nbsp;&nbsp;	Door to door insurance cover</li>
+                                            <li>•&nbsp;&nbsp;	Timeline updates at every stage</li>
+                                            <li>•&nbsp;&nbsp;	Part & full charters</li>
+                                            <li>•&nbsp;&nbsp;	Technically advanced systems for safe operations</li>
                                             
                                         </ul>
                                     </p>
