--- a/seafreight.html
+++ b/seafreight.html
@@ -223,14 +223,14 @@
                                         When you choose us, even if you need more around sea services, we will go above and beyond to customize a perfect delivery. We do each and everything to make your whole transportation experience to meet your expectations.
                                     </p>
 
-                                        <ul>
-                                            <li>•	DDP (Delivery Duty Paid), DDU (Delivery Duty Unpaid)</li>
-                                            <li>•	Port to Port, Door to Door, Door to Port, Port to Door</li>
-                                            <li>•	Booking and pre-shipment planning</li>
-                                            <li>•	Cargo insurance</li>
-                                            <li>•	Customs clearance</li>
-                                            <li>•	Inland transportation arrangements</li>
-                                            <li>•	Tracking and tracing.</li>
+                                        <ul style="color: #64676c;">
+                                            <li>• &nbsp&nbsp	DDP (Delivery Duty Paid), DDU (Delivery Duty Unpaid)</li>
+                                            <li>• &nbsp&nbsp	Port to Port, Door to Door, Door to Port, Port to Door</li>
+                                            <li>• &nbsp&nbsp	Booking and pre-shipment planning</li>
+                                            <li>• &nbsp&nbsp	Cargo insurance</li>
+                                            <li>• &nbsp&nbsp	Customs clearance</li>
+                                            <li>• &nbsp&nbsp	Inland transportation arrangements</li>
+                                            <li>• &nbsp&nbsp	Tracking and tracing.</li>
                                             
                                         </ul>
                                     </p>
