Changes in SCM Features Color and Email in footer

--- a/supplychainmanagement.html
+++ b/supplychainmanagement.html
@@ -191,12 +191,12 @@
                                         <b>Key Features</b>
                                     </p>
                                     <p>
-                                        <ul>
-                                            <li>•	Aligning strategic business needs</li>
-                                            <li>•	Claiming refunds, long standing duty drawback from customs</li>
-                                            <li>•	Integrated approach</li>
-                                            <li>•	Challenges towards valuation / processing and finalization of SVB</li>
-                                            <li>•	Reduction of operating expenses</li>
+                                        <ul style="color: #64676c;">
+                                            <li>• &nbsp;&nbsp;	Aligning strategic business needs</li>
+                                            <li>•&nbsp;&nbsp;	Claiming refunds, long standing duty drawback from customs</li>
+                                            <li>•&nbsp;&nbsp;	Integrated approach</li>
+                                            <li>•&nbsp;&nbsp;	Challenges towards valuation / processing and finalization of SVB</li>
+                                            <li>•&nbsp;&nbsp;	Reduction of operating expenses</li>
                                             
                                         </ul>
                                     </p>
