--- a/careers.html
+++ b/careers.html
@@ -216,7 +216,7 @@
                                         <!-- <label for="resume"><b>Upload your CV :</b></label>
                                         <input type="file" id="resume" name="resume" placeholder="Your CV/Resume" required style="border: 1px solid #1c165c;"> -->
                                         <label for="file-upload" class="custom-file-upload" style="width: 362px; height: 44px;">
-                                            <i class="fa fa-file-upload" aria-hidden="true" style="font-size:48px;color:red"></i> Upload Your CV
+                                            <i class="fa fa-file-upload" aria-hidden="true" style="color:red"></i> Upload Your CV
                                         </label>
                                         <input id="file-upload" type="file"/>
                                     </div>
